# bniehuser-api

./: .env-example  .flaskenv-example  .gitignore  CLAUDE.md  Justfile  PROJECT.md  README.md  pyproject.toml  supervisord.conf
api/: main.py
app/: bot_daemon.py  db.py  main.py  utils.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  food.py  health.py  recipes.py  stocks.py  users.py  weather.py  websocket.py
app/auth/: bootstrap.py  tokens.py
app/clients/: _base.py  finnhub.py  open_meteo.py  openfoodfacts.py  pool.py  spoonacular.py  themealdb.py  twelvedata.py
app/core/: config.py  logging.py  middleware.py  security.py
app/crud/: user.py
app/db/: base.py  init_db.py
app/domain/: crud.py
app/domain/user/: crud.py  models.py  schemas.py
app/external_api/: fio_rest.yaml
app/models/: user.py
app/schemas/: auth.py  user.py
bniehuser_flask/: __init__.py
bniehuser_flask/blueprints/: __init__.py  root.py
docs/: backlog.md  discord-bot-port.md  modernization-plan.md
legacy/discord-bot/: bot_daemon.py  messaging.py
migrations/: env.py
migrations/versions/: 0001_baseline.py
tests/: conftest.py  test_bniehuser_flask.py  test_migration.py  test_routes.py  test_routes_external.py  test_user_model.py  test_websocket.py
