[project]
name = "bniehuser-api"
version = "0.1.0"
description = "FastAPI backend for bniehuser.com"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "sqlmodel>=0.0.38",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
    "testcontainers[postgres]>=4.14.2",
]

[tool.ruff]
target-version = "py312"
line-length = 100
# Substep 2 brings the data layer (app/db.py, app/models/, app/crud/) and
# app/core/config.py into scope. The remaining listed paths are still
# pre-rewrite — substep 3 sweeps them and shrinks this list.
# `legacy/` stays excluded permanently (deleted in substep 4).
exclude = [
    "legacy",
    "migrations",
    "app/api",
    "app/core/security.py",
    "app/main.py",
    "app/utils.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pyright]
pythonVersion = "3.12"
# Pre-rewrite legacy paths are excluded to match ruff scope. Substep 3
# shrinks this list as the routers/core get rewritten.
exclude = [
    "legacy",
    "migrations",
    ".venv",
    "app/api",
    "app/core/security.py",
    "app/main.py",
    "app/utils.py",
]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
